fix layout overflow

--- a/src/Layout/Registration.module.scss
+++ b/src/Layout/Registration.module.scss
@@ -6,6 +6,8 @@
 		font-size: 16px; 
 		background-color: #f3f3f3;
 	}
+	overflow-x: auto;
+	height: calc(100vh - 90px);
 }
 
 .container{
