--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
 	padding: 0;
 	display: block;
 	margin: auto;
-	overflow-x: hidden;
+	overflow: hidden;
 	height: 100vh;
 }
 
@@ -23,7 +23,7 @@ code {
 
 html {
 	background-color: white;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 h1,
 h3 {
